Restructure codebase