@@ -1,3 +1,10 @@
+import solver.Bind;
+import solver.CSolution;
+import solver.Constraint;
+import solver.Pair;
+import solver.Problem;
+import solver.Solver;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -8,27 +15,27 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-public class Main {
+public class Sudoku {
     public static void main(String[] args) {
 
         int[][] grid = new int[][]{
-                new int[]{6,15,1,7,3,-1,2,4,11,5,10,8,13,9,16,12},
-                new int[]{2,11,10,-1,13,8,5,12,9,14,1,16,3,15,6,-1},
-                new int[]{9,16,14,3,7,11,-1,1,2,15,12,13,-1,4,8,10},
-                new int[]{-1,8,-1,13,-1,16,10,15,3,6,4,7,2,14,-1,1},
-                new int[]{11,9,-1,16,4,-1,-1,13,6,7,-1,15,1,2,3,8},
-                new int[]{3,1,4,12,2,6,15,11,16,8,13,10,7,5,14,9},
-                new int[]{ 10,2,7,8,1,3,16,14,12,9,-1,-1,4,13,15,6},
-                new int[]{15,6,13,-1,8,5,-1,7,4,3,2,-1,11,12,10,16},
-                new int[]{16,14,2,15,12,13,-1,5,1,-1,6,9,8,3,4,11},
-                new int[]{7,-1,6,10,14,2,3,16,15,11,8,4,12,1,9,5},
-                new int[]{-1,4,9,11,10,15,-1,6,-1,12,7,3,14,16,13,2},
-                new int[]{ -1,12,3,5,-1,4,8,9,13,2,16,14,-1,-1,7,-1},
-                new int[]{ 13,-1,11,-1,5,9,14,-1,7,1,15,6,-1,-1,12,-1},
-                new int[]{ 12,3,16,1,15,7,-1,-1,10,13,-1,5,-1,11,2,14},
-                new int[]{4,7,8,9,6,1,11,2,14,16,3,12,15,10,5,13},
-                new int[]{14,5,15,6,16,12,13,10,8,4,11,2,9,-1,1,3},
-         };
+                new int[]{6, 15, 1, 7, 3, -1, 2, 4, 11, 5, 10, 8, 13, 9, 16, 12},
+                new int[]{2, 11, 10, -1, 13, 8, 5, 12, 9, 14, 1, 16, 3, 15, 6, -1},
+                new int[]{9, 16, 14, 3, 7, 11, -1, 1, 2, 15, 12, 13, -1, 4, 8, 10},
+                new int[]{-1, 8, -1, 13, -1, 16, 10, 15, 3, 6, 4, 7, 2, 14, -1, 1},
+                new int[]{11, 9, -1, 16, 4, -1, -1, 13, 6, 7, -1, 15, 1, 2, 3, 8},
+                new int[]{3, 1, 4, 12, 2, 6, 15, 11, 16, 8, 13, 10, 7, 5, 14, 9},
+                new int[]{10, 2, 7, 8, 1, 3, 16, 14, 12, 9, -1, -1, 4, 13, 15, 6},
+                new int[]{15, 6, 13, -1, 8, 5, -1, 7, 4, 3, 2, -1, 11, 12, 10, 16},
+                new int[]{16, 14, 2, 15, 12, 13, -1, 5, 1, -1, 6, 9, 8, 3, 4, 11},
+                new int[]{7, -1, 6, 10, 14, 2, 3, 16, 15, 11, 8, 4, 12, 1, 9, 5},
+                new int[]{-1, 4, 9, 11, 10, 15, -1, 6, -1, 12, 7, 3, 14, 16, 13, 2},
+                new int[]{-1, 12, 3, 5, -1, 4, 8, 9, 13, 2, 16, 14, -1, -1, 7, -1},
+                new int[]{13, -1, 11, -1, 5, 9, 14, -1, 7, 1, 15, 6, -1, -1, 12, -1},
+                new int[]{12, 3, 16, 1, 15, 7, -1, -1, 10, 13, -1, 5, -1, 11, 2, 14},
+                new int[]{4, 7, 8, 9, 6, 1, 11, 2, 14, 16, 3, 12, 15, 10, 5, 13},
+                new int[]{14, 5, 15, 6, 16, 12, 13, 10, 8, 4, 11, 2, 9, -1, 1, 3},
+        };
 
         List<Integer> idx = IntStream.range(0, grid.length).boxed().sorted((m, n) -> {
             long a = Arrays.stream(grid[m]).filter(i -> i == -1).count();
@@ -42,9 +49,6 @@ public class Main {
             System.out.print(id + " ");
         System.out.println();
 
-        List<String> arg1 = new ArrayList<>();
-        arg1.add("N");
-
         List<String> fullVar = IntStream.range(0, grid.length).mapToObj(i -> "puzzle_" + i)
                 .collect(Collectors.toList());
 
@@ -54,8 +58,8 @@ public class Main {
         for (int i = 0; i < grid.length; i++) {
             int finalI = i;
             s.addVariable("puzzle_" + i, new Pair(
-                    new Bind(arg1, j -> IntStream.rangeClosed(1, (Integer) j.get(0)).boxed().collect(Collectors.toList())),
-                            new Bind(arg1, j -> new Integer[(Integer) j.get(0)])))
+                            new Bind(List.of("N"), j -> IntStream.rangeClosed(1, (Integer) j.get(0)).boxed().collect(Collectors.toList())),
+                            new Bind(List.of("N"), j -> new Integer[(Integer) j.get(0)])))
 
                     .addGlobalConstraint("puzzle_" + i, (Function<List<Object>, List<List<Integer>>>)
                             l -> {
@@ -91,9 +95,9 @@ public class Main {
                 for (int j = 0; j < n; j++) {
                     int finalJ = j;
                     List<Integer> section = IntStream.range(i * n, (i + 1) * n).flatMap(i1 ->
-                            IntStream.range(finalJ * n, (finalJ + 1) * n).map(j1 -> grid[i1][j1]))
-                            .filter(nn -> nn != -1).boxed().toList();
-                    if (section.stream().distinct().toList().size() != section.size()) return false;
+                                    Arrays.stream(grid[i1], finalJ * n, (finalJ + 1) * n))
+                            .filter(nn -> nn != -1).boxed().collect(Collectors.toList());
+                    if (section.stream().distinct().count() != section.size()) return false;
                 }
             return true;
         }));//.setVariableSelectionOrder(idx);
@@ -105,8 +109,6 @@ public class Main {
                 IntStream.range(0, grid.length).mapToObj(i ->
                         Arrays.stream(Arrays.copyOf(m.get("puzzle_" + i), grid.length)).mapToInt(Integer::intValue)
                                 .toArray()).toArray(int[][]::new), null);
-
-        System.out.println();
         System.out.println(res.count);
     }
 }
